--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -52,7 +52,7 @@
                 <div class="textBox">
                     <label>Station/Place<span style="color:red;">*</span></label>
                     <!--<input tabindex="3" style="text-transform: uppercase"  id="t_station_id" ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" type="text" />-->
-                    <select tabindex="3" style="text-transform: uppercase"   ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" ng-options="st.label as st.name for st in transportersStations" ></select>
+                    <select tabindex="3" style="text-transform: uppercase"   ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" ng-options="st.label as st.label for st in transportersStations" ></select>
                     <div class="clrBt"></div>
 
                 </div>
