--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -43,7 +43,10 @@
                 <div class="textBox">
                     <label>Transport Name<span style="color:red;">*</span></label>
                     <!--<input tabindex="2" style="text-transform: uppercase" id="transporter_name_id" ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.name" type="text" />-->
-                    <select tabindex="2"  ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.name" ng-options="trans.name as trans.name for trans in transporters" ></select>
+                    <div class="flt_L"><div class="selectSty1" style="height:35px;">
+                    <label style="margin-top:0; width:314px;"><span><select tabindex="2" ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.name" ng-options="trans.name as trans.name for trans in transporters" ></select></span></label>
+                    </div></div>                    
+                    
                   <!--<div style="margin-top:4px;" class="buttonMain flt_R">-->
                     <!--<button type="button" ng-click="clearTransporter()">Clear</button>-->
                   <!--</div>-->
@@ -52,7 +55,13 @@
                 <div class="textBox">
                     <label>Station/Place<span style="color:red;">*</span></label>
                     <!--<input tabindex="3" style="text-transform: uppercase"  id="t_station_id" ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" type="text" />-->
-                    <select tabindex="3" style="text-transform: uppercase"   ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" ng-options="st.label as st.label for st in transportersStations" ></select>
+
+                    <div class="flt_L"><div class="selectSty1" style="height:35px;">
+                    <label style="margin-top:0; width:314px;"><span><select tabindex="3" style="text-transform: uppercase"   ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" ng-options="st.label as st.label for st in transportersStations" ></select></span></label>
+                    </div></div> 
+
+
+
                     <div class="clrBt"></div>
 
                 </div>
