--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -44,7 +44,7 @@
                     <label>Transport Name<span style="color:red;">*</span></label>
                     <!--<input tabindex="2" style="text-transform: uppercase" id="transporter_name_id" ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.name" type="text" />-->
                     <div class="flt_L"><div class="selectSty1" style="height:35px;">
-                    <label style="margin-top:0; width:314px;"><span><select tabindex="2" ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.name" ng-options="trans.name as trans.name for trans in transporters" ></select></span></label>
+                    <label style="margin-top:0; width:314px;"><span><select tabindex="2" ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.id" ng-options="trans.id as trans.name for trans in transporters" ></select></span></label>
                     </div></div>                    
                     
                   <!--<div style="margin-top:4px;" class="buttonMain flt_R">-->
