--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -81,20 +81,21 @@
           
           <ul class="checkBoxSectionMain listViewDsp" ng-show="viewName=='list'">
             <li ng-repeat="fns in forwardingNotes | daterange:filterFromDate:filterToDate| filter:transportFilter" daterange class="chkBox" disabled>
-              <div class="linkStyleLst" ><input ng-checked="fns.isDisabled" ng-click="addToVanData(fns)" type="checkbox" />
+              <div class="linkStyleLst" ng-show="!fns.isDispatched" ><input ng-checked="fns.isDisabled" ng-click="addToVanData(fns)" type="checkbox" />
               <a href="" ng-click="addToVanData(fns)" style="width:250px;"><span>{{getDisplayNameforFn(fns)}}</span> <div class="clrBt"></div></a><img ng-click="printFn($event,fns)" src="/com/images/viewiconUL.png" alt="" style="cursor:pointer;margin:2px 0 0;" title="" class="flt_R" /><div class="clrBt"></div></div>
               <div class="clrBt"></div>
-              <!--<div class="unlinkStyleLst" ng-show="fns.isDispatched">-->
-                  <!--<img src="/com/images/bulletWhite.png" alt="" title="" class="flt_L" />-->
-                  <!--<span class="flt_L"><div class="flt_L" style="width:250px;">{{getDisplayNameforFn(fns)}}</div> <img ng-click="printFn($event,fns)" src="/com/images/viewiconUL.png" alt="" title="" style="cursor:pointer;margin:2px 0 0;" class="flt_R" /><div class="clrBt"></div></span>-->
-                  <!--<div class="clrBt"></div>-->
-              <!--</div>-->
+              <div class="unlinkStyleLst" ng-show="fns.isDispatched">
+                  <img src="/com/images/bulletWhite.png" alt="" title="" class="flt_L" />
+                  <span class="flt_L"><div class="flt_L" style="width:250px;">{{getDisplayNameforFn(fns)}}</div> <img ng-click="printFn($event,fns)" src="/com/images/viewiconUL.png" alt="" title="" style="cursor:pointer;margin:2px 0 0;" class="flt_R" /><div class="clrBt"></div></span>
+                  <div class="clrBt"></div>
+              </div>
               <div class="clrBt"></div>
             </li>
           </ul>
           
 <div class="gridViewDsp" ng-show="viewName=='grid'">
-    <div style="cursor:pointer;" ng-repeat="fns in forwardingNotes | daterange:filterFromDate:filterToDate| filter:transportFilter" class="gridSty enableGV"  ng-class="{'disableGVD':fns.isDisabled}"><div ng-click="addToVanData(fns)">{{fns.id}}</div> <a href="">i</a></div>
+    <div style="cursor:pointer;" ng-repeat="fns in forwardingNotes | daterange:filterFromDate:filterToDate| filter:transportFilter" class="gridSty enableGV"  ng-class="{'disableGVD':fns.isDisabled || fns.isDispatched}">
+      <div ng-show="!fns.isDispatched" ng-click="addToVanData(fns)">{{fns.id}}</div> <div ng-show="fns.isDispatched">{{fns.id}}</div><a href="" ng-click="printFn($event,fns)">i</a></div>
     <!--<div class="gridSty">200</div>-->
     <!--<div class="gridSty">300</div>-->
     <!--<div class="gridSty enableGVD">400</div>-->
