--- a/app/dispatches/dispatches.html
+++ b/app/dispatches/dispatches.html
@@ -68,6 +68,7 @@
           <div class="contRightMain" style="width:100%; border:medium none; box-shadow:none; padding:0;">
 <table cellpadding="0" cellspacing="0" width="100%" class="sortable">
             <tr>
+              <th>ID</th>
               <th>Date</th>
               <th>Van No.</th>
               <th>Driver Name</th>
@@ -75,7 +76,8 @@
               <th style="width:51px;">Action</th>
             </tr>
             <tr ng-repeat="dis in dispacthes | filter:transportFilter">
-              <td>{{dis.date |date:'dd-MM-yyyy'}}</td>
+                <td>{{dis.id}}</td>
+                <td>{{dis.date |date:'dd-MM-yyyy'}}</td>
               <td>{{dis.vanNo}}.</td>
               <td>{{dis.name}}</td>
               <td>{{dis.remarks}}</td>
@@ -131,30 +133,35 @@
     <div style="border-bottom:4px double #aec6dc; margin-bottom:15px;"></div>
     <div id="dischsTblouter" class="printClass" style="overflow-y:auto; height:240px;"><table cellpadding="0" cellspacing="0" width="100%" class="sortable dischsTblStyle">
     <tr>
+
+      <th class="id_id_th" >ID</th>
       <th class="id_date_th">Date</th>
       <th>Transport Name</th>
       <th>Station / Place</th>
       <th class="id_bill_th" >Bill No.</th>
       <th class="id_bdate_th">Bill Date.</th>
       <th class="id_value_th">Value</th>
-      <th>Cases</th>
+
       <th>Pvt. Marka</th>
       <th class="id_permit_th">Permit No.</th>
       <th>Customer name</th>
-      <th>Customer City</th>
+      <!--<th>Customer City</th>-->
+        <th>Cases</th>
     </tr>
     <tr ng-repeat="fn in currentDispatch.forwardingNote" ng-class="{'bigTd':fn.isCases}">
+      <td class="id_id_td" >{{fn.id}}</td>
       <td class="id_date_td">{{fn.fnDate | date:'dd-MM-yyyy'}}</td>
       <td style="text-transform: uppercase"><span ng-show="!fn.isCases">{{fn.transporter.name}}</span><span ng-show="fn.isCases">{{fn.receiver}}</span></td>
       <td style="text-transform: uppercase">{{fn.transporterStation}}</td>
       <td class="id_bill_td"  style="text-transform: uppercase">{{fn.billNo}}</td>
       <td class="id_bdate_td" >{{fn.billDates}}</td>
       <td class="id_value_td">{{fn.billValues}}</td>
-      <td><span ng-show="!fn.isCases">{{fn.cases}}</span><span ng-show="fn.isCases">{{fn.totalCases}}</span></td>
+
       <td >{{fn.marka}}</td>
       <td class="id_permit_td" style="text-transform: uppercase">{{fn.permitNo}}</td>
       <td style="text-transform: uppercase">{{fn.customer.name}}</td>
-      <td style="text-transform: uppercase">{{fn.customer.city}}</td>
+      <!--<td style="text-transform: uppercase">{{fn.customer.city}}</td>-->
+        <td><span ng-show="!fn.isCases">{{fn.cases}}</span><span ng-show="fn.isCases">{{fn.totalCases}}</span></td>
     </tr>
     </table></div>
 </div>
