--- a/app/dispatches/dispatches.html
+++ b/app/dispatches/dispatches.html
@@ -123,7 +123,7 @@
       <div class="clrBt"></div>
     </div>
         <div class="textBoxVD flt_R" style="padding-right:10px;">
-            <label>Tota Cases.: </label>
+            <label>Total Cases.: </label>
             <span style="font-family: 'open_sanssemibold'; font-size:13px;">{{getTotalCase(currentDispatch)}}</span>
             <div class="clrBt"></div>
         </div>
