--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -154,7 +154,7 @@
                     <div class="logoPartMain">
                         <div class="compNameCodeM"><span class="compName">{{currentFn.company.name}}</span> <span class="compCode"> ({{currentFn.company.code}})</span></div>
                         <div class="adrsLP">{{getCompleteAddress(currentFn.company)}}</div>
-                        <div class="adrsLP">VAT : {{currentFn.company.vat}} &nbsp;&nbsp; CST : {{currentFn.company.cst_or_tin}}</div>
+                        <div class="adrsLP">VAT : {{currentFn.company.vat}} &nbsp;&nbsp; GST : {{currentFn.company.cst_or_tin}}</div>
                         <div class="adrsLP"></div>
                     </div>
                     <!--          <div class="textBox" style="width:auto;">
