--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -333,9 +333,9 @@
         <h3 class="titleCB" style="background:#d3d3d3; padding:5px 10px; color:#814b27;"><span class="confTxt flt_L" style="margin-top:5px;">Forwarding Note</span> <div class="logoPMain flt_R"><img src="/com/images/logo.png" alt="" title="" style="width:100px;" /></div><div class="clrBt"></div></h3>
         <div class="formViewStyleM">
         	<div class="logoPartMain">
-                <div class="compNameCodeM"><span class="compName" style="font-weight:bold">{{currentFn.company.name}}</span> <span class="compCode"> ({{currentFn.company.code}})</span></div>
-                <div class="adrsLP">{{getCompleteAddress(currentFn.company)}}</div>
-              <div class="adrsLP">VAT : {{currentFn.company.vat}} &nbsp;&nbsp; GST : {{currentFn.company.cst_or_tin}}</div>
+                <div  class="compNameCodeM"><span id="id_company_name" class="compName" style="font-weight:bold"></span> <span id="id_company_code" class="compCode"></span></div>
+                <div id="id_add_div" class="adrsLP">{{}}</div>
+              <div id="id_tax" class="adrsLP"></div>
             </div>
 <!--          <div class="textBox" style="width:auto;">
             <label>Serial No::</label>
@@ -353,12 +353,12 @@
           <div class="clrBt"></div>
           <div class="textBox flt_L">
             <label>Serial No.:</label>
-            <span>{{currentFn.id}}</span>
+            <span id="id_serial"></span>
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
-            <label>Forwarding Date:</label>
-            <span>{{currentFn.fnDate | date:'dd/MM/yyyy'}}</span>
+            <label>Date:</label>
+            <span id="id_fd"></span>
             <div class="clrBt"></div>
           </div>
 
@@ -367,62 +367,62 @@
           <div class="clrBt"></div>
           <div class="textBox flt_L">
             <label>Transport Name:</label>
-            <span style="text-transform: uppercase">{{currentFn.transporter.name}}</span>
+            <span style="text-transform: uppercase" id="id_trans"></span>
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
             <label>Station/Place:</label>
-            <span style="text-transform: uppercase">{{currentFn.transporterStation}}</span>
+            <span style="text-transform: uppercase" id="id_trans_station"></span>
             <div class="clrBt"></div>
           </div>
           <div class="clrBt"></div>
           <div class="textBox flt_L">
             <label>Customer Name:</label>
-            <span style="text-transform: uppercase">{{currentFn.customer.name}}</span>
+            <span style="text-transform: uppercase" id="id_customer_name"></span>
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
             <label>Station/Place:</label>
-            <span style="text-transform: uppercase">{{currentFn.customer.city}}</span>
+            <span style="text-transform: uppercase" id="id_customer_city"></span>
             <div class="clrBt"></div>
           </div>
           <div class="clrBt"></div>
           <div class="textBox flt_L">
             <label>Bill No:</label>
-            <span>{{currentFn.billNo}}</span>
+            <span id="id_billno"></span>
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
             <label>Bill Value:</label>
-            <span>{{getBillValues(currentFn.billValues)}}</span>
+            <span id="id_bill_value"></span>
             <div class="clrBt"></div>
           </div>
           <div class="clrBt"></div>
           <div class="textBox flt_L">
             <label>Bill Date:</label>
-            <span>{{currentFn.billDates}}</span>
+            <span id="id_bill_date"></span>
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
             <label>Cases:</label>
-            <span>{{currentFn.cases}}</span>
+            <span id="id_cases"></span>
             <div class="clrBt"></div>
           </div>
           <div class="clrBt"></div>
           <div class="textBox flt_L">
             <label>Pvt. Marka:</label>
-            <span style="text-transform: uppercase">{{currentFn.marka}}</span>
+            <span style="text-transform: uppercase" id="id_marka"></span>
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
             <label>Permit No.:</label>
-            <span style="text-transform: uppercase">{{currentFn.permitNo}}</span>
+            <span style="text-transform: uppercase" id="id_permit"></span>
             <div class="clrBt"></div>
           </div>
           <div class="clrBt"></div>
           <div class="textBox flt_L">
             <label>Commodity:</label>
-            <span style="text-transform: uppercase">{{currentFn.commodity}}</span>
+            <span style="text-transform: uppercase" id="id_commodity"></span>
             <div class="clrBt"></div>
           </div>
           <div class="textBox flt_L" style="padding-right:0; padding-left:8px; width:230px;">
