--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -333,7 +333,7 @@
         <h3 class="titleCB" style="background:#d3d3d3; padding:5px 10px; color:#814b27;"><span class="confTxt flt_L" style="margin-top:5px;">Forwarding Note</span> <div class="logoPMain flt_R"><img src="/com/images/logo.png" alt="" title="" style="width:100px;" /></div><div class="clrBt"></div></h3>
         <div class="formViewStyleM">
         	<div class="logoPartMain">
-                <div class="compNameCodeM"><span class="compName">{{currentFn.company.name}}</span> <span class="compCode"> ({{currentFn.company.code}})</span></div>
+                <div class="compNameCodeM"><span class="compName" style="font-weight:bold">{{currentFn.company.name}}</span> <span class="compCode"> ({{currentFn.company.code}})</span></div>
                 <div class="adrsLP">{{getCompleteAddress(currentFn.company)}}</div>
               <div class="adrsLP">VAT : {{currentFn.company.vat}} &nbsp;&nbsp; GST : {{currentFn.company.cst_or_tin}}</div>
             </div>
