--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/com/css/style.css">
+  <link rel="stylesheet" href="/com/css/style.css" media="all">
   <link rel="stylesheet" href="app.css">
   <link href="/com/toastr/toastr.min.css" rel="stylesheet" />
   <link href="/com/jqueryUI/jquery-ui.css" rel="stylesheet" />
