--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -176,7 +176,7 @@
               <td>{{fn.billNo}}</td>
               <td>{{fn.billDates}}</td>
               <td>{{getBillValues(fn.billValues)}}</td>
-              <td>{{fn.cases + '('+fn.regularCases+'+'+fn.bigCases+')'}}</td>
+              <td>{{fn.cases + '(R-'+fn.regularCases+' B-'+fn.bigCases+')'}}</td>
               <td>{{fn.marka}}</td>
               <td>{{fn.permitNo}}</td>
               <td>{{fn.customer.name}}</td>
